--- a/details/education.tex
+++ b/details/education.tex
@@ -10,69 +10,67 @@
 
 %---------------------------------------------------------
   \cventry
-  {Computer Science BS, College of Creative Studies (CCS)} % Degree
-    {University of California, Santa Barbara} % Institution
+	{\href{https://ccs.ucsb.edu/majors/computing}{Computer Science BS}, \href{https://ccs.ucsb.edu/}{College of Creative Studies (CCS)}} % Degree
+		{\href{https://www.ucsb.edu/}{University of California, Santa Barbara}} % Institution
     {Santa Barbara, California} % Location
     {2018-2022} % Date(s)    
     {
     \begin{cvitems}
     \item \textbf{GPA: 4.00} 
-    \item \textbf{Relevant Coursework:} Algorithms and Data Structures in C++, Unix Operating Systems Lab, Mathematics of Computer Science (Discrete Math \& Probability), Linear Algebra, Calculus III Multivariable Calculus.
+		\item \textbf{Relevant Coursework:} \href{https://sites.cs.ucsb.edu/~suri/cs130a/cs130a.html}{Algorithms and Data Structures}, \href{https://sites.cs.ucsb.edu/~rich/class/cs170/}{Operating Systems}, \href{https://sites.cs.ucsb.edu/~tyang_class/140f19/}{Parallel Scientific Computing}, \href{https://cs.ucsb.edu/education/courses/cmpsc-176a}{Computer Communication Networks}, \href{https://ccs.ucsb.edu/courses/2019/winter/computer-programming-and-organization}{Computer Programming and Organization}, \href{https://cs.ucsb.edu/education/courses/cmpsc-138}{Formal Languages and Automata}, \href{https://cs.ucsb.edu/education/courses/cmpsc-185}{Human Computer Interaction}, Mathematics of Computer Science (Discrete Math, Probability \& Statistics), Linear Algebra, Differential Equations, Multivariable Calculus, Physics (mechanics, thermodynamics, electricity).
     %\item \textbf{Standardized Tests - SAT Math II: 800/800, AP Computer Science A: 5}
-    \item \textbf{1 of 6 freshmen} chosen to pursue research and an accelerated Computer Science courseload in College of Creative Studies.
+		%\item \textbf{1 of 10} computer science students in my year chosen to pursue accelerated coursework and research in the College of Creative Studies.
     \end{cvitems}
     }
 
 
-    \cventry
-    {Certificate of Completion (Clay Mathematics Institute)} % Degree
-    {PROMYS Research Scholarship (Program in Mathematics for Young Scientists)} % Institution
-    {Boston University} % Location
-    {2017} % Date(s)    
-    {
-    \begin{cvitems}
-    \item One of 80 students, national and international selected in 2017 to do research in number theory at Boston University (six-week summer program sponsored by the Clay Institute) under the mentorship of professors and graduate students from universities such as MIT, Harvard, Princeton.
-    \end{cvitems}
-    }
+    %\cventry
+    %{Certificate of Completion (Clay Mathematics Institute)} % Degree
+    %{PROMYS Research Scholarship (Program in Mathematics for Young Scientists)} % Institution
+    %{Boston University} % Location
+    %{2017} % Date(s)    
+    %{
+    %\begin{cvitems}
+    %\item One of 80 students, national and international selected in 2017 to do research in number theory at Boston University (six-week summer program sponsored by the Clay Institute) under the mentorship of professors and graduate students from universities such as MIT, Harvard, Princeton.
+    %\end{cvitems}
+    %}
 
 
- \cventry
-    {Python Data Science and Web Development Certificate} % Degree
-    {Python Boot Camp at UC Berkeley} % Institution
-    {Berkeley, California} % Location
-    {2016} % Date(s)    
-    {
-      \begin{cvitems}
-      \item Python Boot Camp: A rigorous course in the Python Scripting Language covering website backends(Django), data processing libraries (NumPy, pandas, SciPy, etc.), and Git version control.
-      \end{cvitems}
-      }
+% \cventry
+%    {Python Data Science and Web Development Certificate} % Degree
+%    {Python Boot Camp at UC Berkeley} % Institution
+%    {Berkeley, California} % Location
+%    {2016} % Date(s)    
+%    {
+%      \begin{cvitems}
+%      \item Python Boot Camp: A rigorous course in the Python Scripting Language covering website backends(Django), data processing libraries (NumPy, pandas, SciPy, etc.), and Git version control.
+%      \end{cvitems}
+%      }
 
-\iffalse
-  \cventry
-    {} % Degree
-    {Berkeley City College} % Institution
-    {Berkeley, California} % Location
-    {2016-2017} % Date(s)    
-    {
-    \begin{itemize}
-    \item Chemistry
-    \item Calculus III (Multivariable)
-    \item GPA: 5.0
-    \end{itemize}
-    }
-    
-    \cventry
-    {} % Degree
-    {MIT OpenCourseWare} % Institution
-    {} % Location
-    {2014-2018} % Date(s)    
-    {
-    \begin{itemize}
-    \item Mathematics for Computer Science (6.042)
-    \item Introduction to Algorithms (6.006)
-    \end{itemize}
-    }
-    \fi
+%  \cventry
+%    {} % Degree
+%    {Berkeley City College} % Institution
+%    {Berkeley, California} % Location
+%    {2016-2017} % Date(s)    
+%    {
+%    \begin{itemize}
+%    \item Chemistry
+%    \item Calculus III (Multivariable)
+%    \item GPA: 5.0
+%    \end{itemize}
+%    }
+%    
+%    \cventry
+%    {} % Degree
+%    {MIT OpenCourseWare} % Institution
+%    {} % Location
+%    {2014-2018} % Date(s)    
+%    {
+%    \begin{itemize}
+%    \item Mathematics for Computer Science (6.042)
+%    \item Introduction to Algorithms (6.006)
+%    \end{itemize}
+%    }
     
 %---------------------------------------------------------
 \end{cventries}
