--- a/details/experience.tex
+++ b/details/experience.tex
@@ -9,78 +9,21 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+	% TODO add link to ascent
   \cventry
-    {Computer Scientist} % Job title
-    {Lawrence Berkeley National Laboratory} % Organization
-    {Berkeley, CA, US} % Location
-    {2009 - PRESENT} % Date(s)
+    {Computational Student Intern} % Job title
+		{\href{https://www.llnl.gov/}{Lawrence Livermore National Laboratory (HEDP)}} % Organization
+    {Livermore, CA, US} % Location
+    {June 2019 - September 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Computer Languages and System Software Group}
-		\item {Affiliate to the computer architecture and
-				performance and algorithms groups}
+			\item {Wrote Python, HTML/Javascript/CSS, and C++ code to integrate Jupyter Notebook with the \MYhref[myblue]{https://github.com/Alpine-DAV/ascent}{Ascent visualization infrastructure} allowing interactive in-situ visualization/analysis of large scale physics simulations running in parallel on supercomputers}
+			\item {First author on a short paper published in the \MYhref[myblue]{https://vis.lbl.gov/events/ISAV2019/}{ISAV 2019} workshop held at The International Conference on High Performance Computing}
+				\item {Developed a domain-specific ``expressions'' language for Ascent to facilitate in-situ adaptive analysis by using Flex and Bison to generate a lexer and parser then generating an Abstract Syntax Tree using C++ and finally creating a task graph to be executed in parallel by Ascent}
+				\item {Implemented several statistical analysis functions in the expressions language leveraging parallelism via OpenMP and MPI}
+				\item{Presented and documented my work in formal documentation pages, example Jupyter Notebooks, a Scientific Poster, and a slideshow presentation}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Visiting researcher} % Job title
-    {Institut National de Recherche en Informatique et en Automatique (INRIA) Rennes}
-    {Rennes, France} % Location
-    {2006 - 2008} % Date(s)
-    {
-    }
-
-  \cventry
-    {Visiting professor}
-    {University of Valenciennes} % Organization
-    {Valenciennes, France} % Location
-    {Summer 2006 - Summer 2007} % Date(s)
-    {
-    }
-
-
-%---------------------------------------------------------
-  \cventry
-    {Assistant/Associate professor}
-    {Suez Canal University} % Organization
-    {Egypt} % Location
-    {2003 - 2008} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Fulfilling contract with the Egyptian government
- for partially funding my PhD.}
-		\item {Promoted to associate Prof. in 2008}
-      \end{cvitems}
-    }
-
-  \cventry
-    {Research Assistant}
-	{North Carolina State University} % Organization
-    {NC, US} % Location
-    {2000 - 2003} % Date(s)
-    {
-        \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Center of Advanced Computing and  Communication.}
-      \end{cvitems}
-    }
-
-  \cventry
-    {Software developer, Research/teaching assistant}
-    {Prior Employment} % Organization
-    {Egypt} % Location
-    {1996 - 1999} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Teaching assistant at the American University Cairo (AUC)} 
-		\item {Research and Teaching assistant at Suez Canal University}
-		\item {Software developer at Sakhr Software, Cairo}
-      \end{cvitems}
-    }
-
-
-
-
-%---------------------------------------------------------
 %---------------------------------------------------------
 \end{cventries}
