--- a/details/projects.tex
+++ b/details/projects.tex
@@ -17,18 +17,14 @@
     {Wrote a hacky program in C allowing users to impersonate anybody on webcam chat. The program inputs any video file and a corresponding JSON file of timestamps. The GUI allows users to smoothly and convincingly control the actions of a virtual person or thing on their webcam. I achieved this by writing a Linux Kernel Module (using V4l2 API) and a corresponding application (using Libav) to pipe video into a webcam device.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
-  \cvskill
-    {GoGaucho UCSB App} % Category
-    {Backend developer for iOS and Android app with 3000+ daily users. In charge of Node.js code for authentication and scraping UCSB's class registration website, as well as Shuttle Live Locations for convenient access inside the App.} % Skills
-%---------------------------------------------------------
 \cvskill
-    {Masterlock Solver Bot} % Category
-    {Built a robot which is able to unlock any master combination lock in seconds and output its combination. I designed a custom breadboard circuit, wrote Arduino code, 3D printed a frame, and assembled together with motors.} % Skills
+	{\MYhref[myblue]{https://github.com/SeifIbrahim/combo-breaker}{Masterlock Solver Robot}} % Category
+	{Built a robot which is able to unlock any master combination lock in seconds and output its combination. I designed a custom breadboard circuit, wrote Arduino code, 3D printed a frame, and assembled together with motors.} % Skills
   \vspace{1mm}
 %---------------------------------------------------------
 \cvskill
-  {Neural Network Game Bot}
-  {Developed an AI player in Javascript using neural networks and evolutionary learning algorithms. The bot learns how to complete any level of a platformer game (similar to mario) given only the game controls and end destination.}
+	{\MYhref[myblue]{https://github.com/SeifIbrahim/NEAT}{Neuroevolution Game Bot}}
+  {Developed an AI player in Javascript written from scratch based on a paper on neuroevolution of augmenting topologies. The algorithm quickly generates a minimal network capable of navigating the obstacles of a platformer game similar to Mario.}
   \vspace{1mm}
 %---------------------------------------------------------
   \cvskill
@@ -37,3 +33,4 @@
   \vspace{1mm}
 
 \end{cvskills}
+\vspace{-5.0mm}
