--- a/details/skills.tex
+++ b/details/skills.tex
@@ -12,13 +12,13 @@
 %---------------------------------------------------------
   \cvskill
     {Programming Languages} % Category
-    {C/C++, Java, Python, Django, Node.js, Express, HTML/CSS, Javascript, LaTeX, SQL \newline
+    {C/C++, Java, Python, Django, Node.js, Express, HTML/CSS, Javascript, Bootstrap, LaTeX, SQL \newline
     Solved hundreds of algorithm and security problems on PicoCTF, Project Euler, USACO, Codeforces, Google Foobar, etc.} % Skills
 
 %---------------------------------------------------------
  \cvskill
     {Software} % Category
-    {Git, ViM, Linux Development, Eclipse, Matlab, Adobe Photoshop and Illustrator, Excel} % Skills
+    {Git, ViM, Make, GDB, Linux Command Line, Eclipse, Jupyter Notebook, Microsoft Office, Adobe Suite} % Skills
 
 %%---------------------------------------------------------
 %  \cvskill
